--- a/index.html
+++ b/index.html
@@ -19,7 +19,25 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-
+      <div class="container">
+        <div class="row">
+          <h1 class="col-md-12">First Bootstrap Lab</h1>
+        </div>
+        <div class="row">
+          <div class="col-md-4">
+            <h2>Column Heading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae urna vestibulum, tristique elit nec, feugiat sem. Fusce pulvinar condimentum pretium. Curabitur cursus, ligula sit amet fringilla viverra, elit dolor tempus est, sed hendrerit augue risus a sapien. Maecenas suscipit, dui vel commodo vulputate, dui ex commodo leo, eget iaculis enim nulla sed mi. Maecenas facilisis aliquam vulputate. Mauris sagittis, augue eget hendrerit egestas, nunc nibh efficitur turpis, eget porta magna dui eget tellus. Maecenas at ligula ut lacus luctus dapibus. Nullam leo tortor, luctus non nisl at, convallis volutpat mauris. Pellentesque eu purus eu orci euismod dapibus vitae vitae lacus.</p>
+          </div>
+          <div class="col-md-4">
+            <h2>Column Heading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae urna vestibulum, tristique elit nec, feugiat sem. Fusce pulvinar condimentum pretium. Curabitur cursus, ligula sit amet fringilla viverra, elit dolor tempus est, sed hendrerit augue risus a sapien. Maecenas suscipit, dui vel commodo vulputate, dui ex commodo leo, eget iaculis enim nulla sed mi. Maecenas facilisis aliquam vulputate. Mauris sagittis, augue eget hendrerit egestas, nunc nibh efficitur turpis, eget porta magna dui eget tellus. Maecenas at ligula ut lacus luctus dapibus. Nullam leo tortor, luctus non nisl at, convallis volutpat mauris. Pellentesque eu purus eu orci euismod dapibus vitae vitae lacus.</p>
+          </div>
+          <div class="col-md-4">
+            <h2>Column Heading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae urna vestibulum, tristique elit nec, feugiat sem. Fusce pulvinar condimentum pretium. Curabitur cursus, ligula sit amet fringilla viverra, elit dolor tempus est, sed hendrerit augue risus a sapien. Maecenas suscipit, dui vel commodo vulputate, dui ex commodo leo, eget iaculis enim nulla sed mi. Maecenas facilisis aliquam vulputate. Mauris sagittis, augue eget hendrerit egestas, nunc nibh efficitur turpis, eget porta magna dui eget tellus. Maecenas at ligula ut lacus luctus dapibus. Nullam leo tortor, luctus non nisl at, convallis volutpat mauris. Pellentesque eu purus eu orci euismod dapibus vitae vitae lacus.</p>
+          </div>
+        </div>
+      </div>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
