--- a/index.html
+++ b/index.html
@@ -17,8 +17,14 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+  
+  <div class="jumbotron">
     <h1>Hello, world!</h1>
+    <p>...</p>
+    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+  </div>
+
+  <body>
       <div class="container">
         <div class="row">
           <h1 class="col-md-12">First Bootstrap Lab</h1>
