--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
       <div class="container">
         <div class="row">
-          <h1 class="col-md-12">First Bootstrap Lab</h1>
+          <h1 class="col-md-12">Bootstrap Lab 3/23</h1>
         </div>
         <div class="row">
           <div class="col-md-4">
