--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
   <div class="jumbotron">
     <h1>Hello, world!</h1>
-    <p>...</p>
+    <p>This is a template for a simple marketing or informational website.  It includes a large callout called a jumbotron and three supporting pieces of content.  Use it as a starting point to create something more unique.</p>
     <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
   </div>
 
