--- a/index.html
+++ b/index.html
@@ -76,7 +76,10 @@
     <script src="js/bootstrap.min.js"></script>
   </body>
   
-  <footer>
-    <p>© Company 2015.</p>
-  </footer>
+  <div class="container">
+    <br>
+    <footer>
+      <p>© Company 2015.</p>
+    </footer>
+  </div>
 </html>
