--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
           <div class="col-md-4">
             <h2>Heading</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae urna vestibulum, tristique elit nec, feugiat sem. Fusce pulvinar condimentum pretium. Curabitur cursus, ligula sit amet fringilla viverra, elit dolor tempus est, sed hendrerit augue risus a sapien. Maecenas suscipit, dui vel commodo vulputate, dui ex commodo leo, eget iaculis enim nulla sed mi. Maecenas facilisis aliquam vulputate. Mauris sagittis, augue eget hendrerit egestas, nunc nibh efficitur turpis, eget porta magna dui eget tellus. Maecenas at ligula ut lacus luctus dapibus. Nullam leo tortor, luctus non nisl at, convallis volutpat mauris. Pellentesque eu purus eu orci euismod dapibus vitae vitae lacus.</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">View Details >> </a></p>
+            <p><a class="btn btn-success" href="#" role="button">View Details >> </a></p>
           </div>
           <div class="col-md-4">
             <h2>Heading</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae urna vestibulum, tristique elit nec, feugiat sem. Fusce pulvinar condimentum pretium. Curabitur cursus, ligula sit amet fringilla viverra, elit dolor tempus est, sed hendrerit augue risus a sapien. Maecenas suscipit, dui vel commodo vulputate, dui ex commodo leo, eget iaculis enim nulla sed mi. Maecenas facilisis aliquam vulputate. Mauris sagittis, augue eget hendrerit egestas, nunc nibh efficitur turpis, eget porta magna dui eget tellus. Maecenas at ligula ut lacus luctus dapibus. Nullam leo tortor, luctus non nisl at, convallis volutpat mauris. Pellentesque eu purus eu orci euismod dapibus vitae vitae lacus.</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">View Details >> </a></p>
+            <p><a class="btn btn-success" href="#" role="button">View Details >> </a></p>
           </div>
           <div class="col-md-4">
             <h2>Heading</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae urna vestibulum, tristique elit nec, feugiat sem. Fusce pulvinar condimentum pretium. Curabitur cursus, ligula sit amet fringilla viverra, elit dolor tempus est, sed hendrerit augue risus a sapien. Maecenas suscipit, dui vel commodo vulputate, dui ex commodo leo, eget iaculis enim nulla sed mi. Maecenas facilisis aliquam vulputate. Mauris sagittis, augue eget hendrerit egestas, nunc nibh efficitur turpis, eget porta magna dui eget tellus. Maecenas at ligula ut lacus luctus dapibus. Nullam leo tortor, luctus non nisl at, convallis volutpat mauris. Pellentesque eu purus eu orci euismod dapibus vitae vitae lacus.</p>
-            <p><a class="btn btn-primary btn-lg" href="#" role="button">View Details >> </a></p>
+            <p><a class="btn btn-success" href="#" role="button">View Details >> </a></p>
           </div>
         </div>
       </div>
